--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="/static/css/jquery.mobile.structure-1.3.2.min.css<%=cacheKey%>" type="text/css" media="screen" charset="utf-8">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/jquery.mobile-1.3.2.min.js"></script>
-	<script type="text/javascript" src="/static/js/socket.io.js"></script>
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="/static/js/purl.js"></script>
 	<script type="text/javascript" src="/static/js/rasbot.js"></script>
 	<style type="text/css" media="screen">
