--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,16 @@
 		#main #right{
 			float: right;
 		}
-		
+		#status{
+            clear: both;
+            width: 90%;
+            margin: 4px auto;
+            padding: 4px 1em;
+            background-color: #b42a2e;
+        }
+        #status.good{
+            background-color: #008800;
+        }
 		
 	</style>
 </head>
@@ -65,6 +74,7 @@
 		<div>
 			<a id="back" href="javascript:;">Back</a>
 		</div>
+        <div id="status"></div>
 	</div>
 
 <script type="text/javascript" charset="utf-8">
