--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,32 +12,47 @@
 	<link rel="stylesheet" href="/static/css/layout.css<%=cacheKey%>" type="text/css" media="screen" charset="utf-8">
 	<link rel="stylesheet" href="/static/css/jquery.mobile.structure-1.3.2.min.css<%=cacheKey%>" type="text/css" media="screen" charset="utf-8">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
-	<script type="text/javascript" src="/static/js/jquery.mobile-1.3.2.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.mobile-1.3.2.min.js"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="/static/js/purl.js"></script>
 	<script type="text/javascript" src="/static/js/rasbot.js"></script>
 	<style type="text/css" media="screen">
+        [class*='col-'] {
+            float: left;
+        }
 		#main{
-			width: 95%;
+			width: 100%;
 			height: 95%;
 		}
+        .row{
+            clear:both;
+
+        }
+        .col-3{
+            width: 33.33%;
+        }
+
 		#main a{
 			text-decoration: none;
-			margin: .1em;
+			margin: .5em;
 			padding: .4em;
-			font-size: 1.5em;
+			font-size: 1em;
 			text-align: center;
 			color: #000;
-			width: 30%;
-			height: 20%;
+			height: 10%;
 			background: #ccc;
 			opacity: .3;
 			display: block;
 			vertical-align: middle;
+            /*float:left;*/
 		}
-		#main div{
-			clear: both;
-		}
+        #main a.active{
+            background: #008800;
+        }
+        /*
+        .center{
+            margin-left: 30%;
+        }
 		#main #forward, #main #back{
 			margin-left: auto;
 			margin-right: auto; 
@@ -49,33 +64,72 @@
 		#main #right{
 			float: right;
 		}
-		#status{
+		*/
+        #diagnostic{
+            color: #ffffff;
+            font-size: .4em;
+        }
+        #status{
             clear: both;
             width: 90%;
-            margin: 4px auto;
-            padding: 4px 1em;
             background-color: #b42a2e;
+            padding: .2em;
         }
         #status.good{
             background-color: #008800;
         }
-		
+        .form{
+            width: 80%;
+        }
+        #speech{
+            display: block;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            background-color: #cccccc;
+        }
 	</style>
 </head>
 <body>
+    <div id="diagnostic">status: <span id="status"></span></div>
+
 	<div id="main">
-		<div style="text-align: center;">
-			<a id="forward" href="javascript:;">Forward</a>
+		<div class="row">
+            <div class="col-3">
+                <a id="wideLeft" class="left" href="javascript:;">WideLeft</a>
+            </div>
+            <div class="col-3">
+    			<a id="forward" class="center" href="javascript:;">Forward</a>
+            </div>
+            <div class="col-3">
+                <a id="wideRight" class="right" href="javascript:;">WideRight</a>
+            </div>
 		</div>
-		<div>
-			<a id="left" href="javascript:;">Left</a>
-			<a id="right" href="javascript:;">Right</a>
+        <div class="row">
+            <div class="col-3">
+		    	<a id="left" href="javascript:;">Left</a>
+            </div>
+            <div class="col-3">
+                <a id="beep" href="javascript:;">Beep</a>
+            </div>
+            <div class="col-3">
+    			<a id="right" href="javascript:;">Right</a>
+            </div>
 		</div>
-		<div>
-			<a id="back" href="javascript:;">Back</a>
+		<div class="row">
+            <div class="col-3">
+                &nbsp;
+            </div>
+            <div class="col-3">
+                <a id="back" href="javascript:;">Back</a>
+            </div>
+            <div class="col-3">
+            </div>
 		</div>
-        <div id="status"></div>
 	</div>
+    <div class="rasform">
+        <input type="text" id="speech" name="speech" />
+    </div>
 
 <script type="text/javascript" charset="utf-8">
 	$(rasbot.init);
