--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
 
 	<title>RASBOT</title>
 	<link rel="stylesheet" href="/static/css/layout.css<%=cacheKey%>" type="text/css" media="screen" charset="utf-8">
-	<link rel="stylesheet" href="/static/css/jquery.mobile.structure-1.3.2.min.css<%=cacheKey%>" type="text/css" media="screen" charset="utf-8">
+	<link rel="stylesheet" href="/static/css/jquery.mobile-1.4.5.custom.structure.min.css<%=cacheKey%>" type="text/css" media="screen" charset="utf-8">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.mobile-1.3.2.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.mobile-1.4.5.custom.min.js"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="/static/js/purl.js"></script>
 	<script type="text/javascript" src="/static/js/rasbot.js"></script>
@@ -110,20 +110,10 @@
 		    	<a id="left" href="javascript:;">Left</a>
             </div>
             <div class="col-3">
-                <a id="beep" href="javascript:;">Beep</a>
-            </div>
-            <div class="col-3">
-    			<a id="right" href="javascript:;">Right</a>
-            </div>
-		</div>
-		<div class="row">
-            <div class="col-3">
-                &nbsp;
-            </div>
-            <div class="col-3">
                 <a id="back" href="javascript:;">Back</a>
             </div>
             <div class="col-3">
+    			<a id="right" href="javascript:;">Right</a>
             </div>
 		</div>
 	</div>
