--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,7 @@
         }
 
 		#main a,
+	#shutdownDiv a,
         #sounds a{
 			text-decoration: none;
 			margin: .5em;
@@ -45,8 +46,20 @@
 			opacity: .3;
 			display: block;
 			vertical-align: middle;
-            /*float:left;*/
+			            /*float:left;*/
 		}
+
+	#sounds a{
+	float: left;
+	width: 25%;	
+	}
+
+	#shutdownDiv a{
+	width: 10%;
+	margin:top; 20em;
+clear:both;
+}
+
         #main a.active,
         #sounds a.active{
             background: #008800;
@@ -89,6 +102,7 @@
             padding: 0;
             margin: 0;
             background-color: #cccccc;
+		font-size: 2em;
         }
 	</style>
 </head>
@@ -126,6 +140,10 @@
         <div id="sounds" class="row">
 
         </div>
+
+	<div id="shutdownDiv" class="row">
+		<a id="shutdown" href="javascript:;">Shutdown</a>
+	</div>
     </div>
 
 
